@@ -1,4 +1,4 @@
-#	$OpenBSD: try-ciphers.sh,v 1.18 2013/01/12 11:23:53 djm Exp $
+#	$OpenBSD: try-ciphers.sh,v 1.19 2013/02/11 23:58:51 djm Exp $
 #	Placed in the Public Domain.
 
 tid="try ciphers"
@@ -51,15 +51,5 @@ then
 	:
 else
 
-echo "Ciphers acss@openssh.org" >> $OBJ/sshd_proxy
-c=acss@openssh.org
-for m in $macs; do
-	trace "proto 2 $c mac $m"
-	verbose "test $tid: proto 2 cipher $c mac $m"
-	${SSH} -F $OBJ/ssh_proxy -2 -m $m -c $c somehost true
-	if [ $? -ne 0 ]; then
-		fail "ssh -2 failed with mac $m cipher $c"
-	fi
-done
 
 fi
