@@ -52,6 +52,9 @@
    - dtucker@cvs.openbsd.org 2013/02/11 21:21:58
      [sshd.c]
      Add openssl version to debug output similar to the client.  ok markus@
+   - djm@cvs.openbsd.org 2013/02/11 23:58:51
+     [regress/try-ciphers.sh]
+     remove acss here too
 
 20130211
  - (djm) [configure.ac openbsd-compat/openssl-compat.h] Repair build on old
